--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -33,4 +33,8 @@
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="menu">Menu</string>
+    <string name="carrello">Carrello</string>
+    <string name="ordine">Ordine</string>
+    <string name="signout">Signout</string>
 </resources>
